# project1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  dataset_csv.yaml  error_analysis.yaml  lstm.yaml  lstm_attn.yaml  tfidf.yaml
notebooks/original/: LSTMAttentionClassifierBaseline.ipynb  ablation.ipynb  clean_dataset.ipynb  error_analysis.ipynb  tfidf_baseline.ipynb
scripts/: build_dataset.py  run_ablation.py  run_error_analysis.py  train_lstm.py  train_lstm_attn.py  train_tfidf.py
src/nlp_textclf/analysis/: error_analysis.py
src/nlp_textclf/data/: build_csv_dataset.py  cleaning.py  files_to_df.py  loaders.py  splitting.py  tfidf_baseline.py  tokenizers.py  vocab.py
src/nlp_textclf/models/: bilstm_pool.py  lstm_attn.py
src/nlp_textclf/training/: metrics.py  trainer.py
src/nlp_textclf/utils/: config.py  device.py  io.py  seed.py
tests/: test_vocab.py
