[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-textclf"
version = "0.1.0"
description = "A reproducible text classification project (TF-IDF baseline, BiLSTM, BiLSTM+Attention, ablation, error analysis)."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
